fix: error on iphone with buggy scrolling

--- a/styles/global.css
+++ b/styles/global.css
@@ -3,7 +3,7 @@
 
 html, body {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     padding: 0;
     margin: 0;
     font-family: var(--body);
